# game_prototype

./: .gitignore  CMakeLists.txt  README.md  build-win.bat
PingPong/Debug/res/: arkanoid_base.tsx  box.tsx  pong_map.tmx
PingPong/PingPong/: AnimatedNode.cpp  AnimatedNode.h  Animator.cpp  Animator.h  Application.cpp  Application.h  Ball.cpp  Ball.h  Command.h  CommandCatalogue.h  CommandQueue.h  Context.h  Cube.cpp  Cube.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  InvisibleNode.cpp  InvisibleNode.h  Level.cpp  Level.h  MainMenuState.cpp  MainMenuState.h  ManeMenuState.cpp  ManeMenuState.h  MoveableNode.cpp  MoveableNode.h  Paddle.cpp  Paddle.h  PauseState.cpp  PauseState.h  PingPong.vcxproj  Player.cpp  Player.h  ResourceHolder.h  SceneNode.cpp  SceneNode.h  SpriteNode.cpp  SpriteNode.h  (+13 more)
PingPong/PingPong/res/: ball.tsx  pong_map.tmx
cmake/modules/: FindSFML.cmake
core/: CMakeLists.txt
core/anim/: SBTAnimation.h  SBTAnimator.cpp
core/commandsystem/include/: SBTAbstractCommandManager.h  SBTCommand.h  SBTCommandQueue.h
core/commandsystem/src/: SBTAbstractCommandManager.cpp
core/common/include/: SBTAbstractApplication.h  SBTContext.h  SBTGameWindow.h  SBTUtility.h
core/common/src/: SBTAbstractApplication.cpp  SBTGameWindow.cpp  SBTUtility.cpp
core/graphicsystem/include/: ResourceHolder.h  SBTAbstractGraphicResource.h  SBTAbstractSequence.h  SBTAnimation.h  SBTAnimator.h  SBTAtlasHolder.h  SBTFrame.h  SBTGraphicResourceHolder.h  SBTSequenceState.h  SBTSpriteAtlas.h  SBTSpriteSequence.h  SBTTextureHolder.h  SBTTileSequence.h  SBTTileSheet.h  SBTTileSheetHolder.h
core/graphicsystem/src/: SBTAnimation.cpp  SBTAnimator.cpp  SBTSpriteAtlas.cpp  SBTSpriteSequence.cpp  SBTTileSequence.cpp  SBTTileSheet.cpp
core/meta_examples/: SpriteAtlas_MetaFile_Example.xml  SpriteSequence_MetaFile_example.xml
core/new_gs/: SBTAnimation2.cpp  SBTAnimation2.h  SBTAnimator2.cpp  SBTAnimator2.h  SBTFrame.h  SBTSpriteAtlas.cpp  SBTSpriteAtlas.h  SBTSpriteSequence.cpp  SBTSpriteSequence.h
core/res/: SBTAbstractGraphicResource.h  SBTFrame.h  SBTSpriteAtlas.cpp  SBTSpriteAtlas.h  SBTTexture.cpp  SBTTexture.h  SBTTileSheet.cpp  SBTTileSheet.h
core/scenegraph/include/: SBTAbstractAnimatedNode.h  SBTAbstractSceneNode.h  SBTAbstractSpriteNode.h  SBTAbstractUnvisibleNode.h  SBTAnimation.h  SBTAnimator.h
core/scenegraph/src/: SBTAbstractAnimatedNode.cpp  SBTAbstractSceneNode.cpp  SBTAbstractSpriteNode.cpp  SBTAbstractUnvisibleNode.cpp  SBTAnimation.cpp  SBTAnimator.cpp
core/statesystem/include/: SBTAbstractApplicationState.h  SBTStateStack.h
core/statesystem/src/: SBTAbstractApplicationState.cpp  SBTStateStack.cpp
core/worldsystem/include/: SBTAbstractWorld.h  SBTBasicContactListener.h  SBTLevel.h  TMXMap.h
core/worldsystem/src/: SBTAbstractWorld.cpp  SBTLevel.cpp  TMXMap.cpp
ext/box2d/: CMakeLists.txt
ext/box2d/Box2D/Dynamics/: b2World.h
ext/box2d/Box2D/Dynamics/Joints/: b2MouseJoint.h
ext/sfml/examples/opengl/resources/: Thumbs.db
ext/tinyxml2/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  appveyor.yml  biicode.conf  cmake_uninstall.cmake.in  readme.md  tinyxml2.pc.in  xmltest.cpp
ext/tinyxml2/contrib/: html5-printer.cpp
ext/tinyxml2/resources/: dream.xml  utf8test.xml  utf8testverify.xml
include/: AnimatedNode.h  Animator.h  Application.h  Ball.h  CommandCatalogue.h  Context.h  Cube.h  GameData.h  GameOverState.h  GameOverStateParam.h  GameState.h  LayerNode.h  MainMenuState.h  MyContactListener.h  Paddle.h  PauseState.h  Player.h  RecieverTypeEnum.h  ResourcesIDEnum.h  SceneNode.h  SpriteNode.h  State.h  StateIDEnum.h  StateStack.h  TileSheet.h  TitleState.h  Utility.h  Wall.h  Window.h  World.h
res/: ball_sprites.tsx  player.xml  player_seq.xml
src/: AnimatedNode.cpp  Animator.cpp  Application.cpp  Ball.cpp  Cube.cpp  GameData.cpp  GameOverState.cpp  GameState.cpp  LayerNode.cpp  MainMenuState.cpp  MyContactListener.cpp  Paddle.cpp  PauseState.cpp  Player.cpp  SpriteNode.cpp  TileSheet.cpp  TitleState.cpp  Utility.cpp  Wall.cpp  Window.cpp  World.cpp  main.cpp
tinyXML2/: tinyxml2d.exp  tinyxml2d.lib
